@@ -87,6 +87,7 @@ Fixes:
  * Fix a crash bug in @function/restrict on malformed input. Reported by
    Padraic. [SW]
  * Some fixes to the test suite. Reported by Covenent. [MG]
+ * @pageformat included nospoof information. Reported by Jules. [MG]
 
 Version 1.8.4 patchlevel 6                                 Jul 29,  2011
 
